Création de la route GET /etudiants/start/{startDateString}/end/{endDateString}/sessions
